examples/passing/ModuleExportExcluded/A.purs
module A (module Prelude, foo) where

import Prelude

foo :: Number -> Number
foo _ = 0.0
